# statdb

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
doc/design/: buffer-pool-manager.md
include/: buffer_pool.hpp
include/cache/: concepts.hpp  lru_cache.hpp
include/memory/: mem_chunk_array.hpp
include/page/: page.hpp  page_buffer.hpp  page_id.hpp
include/std/: functional.hpp  ranges.hpp
include/storage/: concepts.hpp  function_page_storage.hpp  never_page_storage.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  buffer_pool_test.cpp  incremental_page_generator.hpp
